--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
            
         <img class="topleft" src="images/TopLeftNav.png" width="400px" > 
         <div class="topnav">
-          <img class="logo" src="images/jblogo.png" width="80px">
-          <img class="name" src="images/jeffreyboehme.png" width="300px">
+          <img class="logo" src="images/JBlogo.png" width="80px">
+          <img class="name" src="images/Jeffreyboehme.png" width="300px">
             <a href="#work" class="navbutton">Work</a>
             <a href="#about" class="navbutton">About</a>
             <a href="#skills" class="navbutton">Skills</a>
